Adicionado animações no background

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <link rel="shortcut icon" href="img/favicon-brisanet.svg" type="webp/x-icon">
      <link rel="icon" sizes="192x192" href="img/favicon-brisanet.png">
      <link rel="icon" sizes="512x512" href="img/favicon-brisanet.png">
@@ -18,6 +18,49 @@
 </head>
 
 <body>
+
+    <ul class="background">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+     </ul>
 
     <div class="wrapper">
         <form class="myForm">
@@ -35,7 +78,7 @@
 
             <div class="input-wrapper">
                 <label for="number">Valor do plano</label>
-                <input type="number" id="number" name="number" required>
+                <input type="text" id="number" name="number" required>
             </div>
 
             <div class="buttons">
