--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="shortcut icon" href="img/favicon-brisanet.svg" type="webp/x-icon">
-     <link rel="icon" sizes="192x192" href="img/favicon-brisanet.png">
-     <link rel="icon" sizes="512x512" href="img/favicon-brisanet.png">
-     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon-brisanet.png">
-     <link rel="apple-touch-icon" sizes="152x152" href="img/favicon-brisanet.png">
-     <link rel="apple-touch-icon" sizes="120x120" href="img/favicon-brisanet.png">
-     <link rel="apple-touch-icon" sizes="76x76" href="img/favicon-brisanet.png">
+    <link rel="icon" sizes="192x192" href="img/favicon-brisanet.png">
+    <link rel="icon" sizes="512x512" href="img/favicon-brisanet.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon-brisanet.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="img/favicon-brisanet.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="img/favicon-brisanet.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="img/favicon-brisanet.png">
 
 
     <title>Pro Rata Calc</title>
 </head>
 
 <body>
+
+    <div class="error-message">
+        <p>Digite apenas números</p>
+    </div>
 
     <ul class="background">
         <li></li>
@@ -60,7 +64,7 @@
         <li></li>
         <li></li>
         <li></li>
-     </ul>
+    </ul>
 
     <div class="wrapper">
         <form class="myForm">
@@ -77,8 +81,16 @@
             </div>
 
             <div class="input-wrapper">
-                <label for="number">Valor do plano</label>
-                <input type="text" id="number" name="number" required>
+                <div class="class-col">
+                    <label for="number">Valor do plano</label>
+                    <input type="text" id="number" name="number" required autocomplete="off">
+                </div>
+
+                <figure>
+                    <a href="https://www.brisanet.com.br/redemovel" target="_blank">
+                        <img class="brisanet-logo-img" src="img/favicon-brisanet.svg" alt="">
+                    </a>
+                </figure>
             </div>
 
             <div class="buttons">
