--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="input-wrapper">
                 <div class="class-col">
                     <label for="number">Valor do plano</label>
-                    <input type="text" id="number" name="number" required autocomplete="off" placeholder="Use pontos. Ex: 1.0">
+                    <input type="text" id="number" name="number" required autocomplete="off" placeholder="Ex: 1.0">
                 </div>
 
                 <figure>
