--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Calculadora automática para determinar os valores proporcionais aos dias de uso do serviço 5G da Brisanet.">
+    <meta name="author" content="Marcos Vinicius da Silva Bezerra | @m.viniciussb">
+
+
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="shortcut icon" href="img/favicon-brisanet.svg" type="webp/x-icon">
 
@@ -117,7 +122,7 @@
 
     <div class="sticker">
         <a href="https://forms.gle/RvUn99oWAN8MaXCS6" target="_blank">
-            <img class="bug-img" src="img/bug-fill.svg" alt="">
+            <img class="bug-img" src="img/warning-fill.svg" alt="">
         </a>
     </div>
 
