adicionado acessibilidade e melhorado estetica

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="./img/icon-brisanet-smartphone.png">
 
 
-    <title>PRO RATA CALC | Calculadora de proporcionais 5G</title>
+    <title>QUICKBILL | Calculadora de proporcionais 5G</title>
 </head>
 
 <body>
@@ -70,7 +70,7 @@
     </ul>
 
     <form class="myForm">
-        <h1>Pro Rata Calc</h1>
+        <h1>QUICKBILL CALC</h1>
 
         <div class="input-wrapper">
             <label for="maturity">Data de Vencimento:</label>
@@ -95,8 +95,11 @@
                     <option selected value="4.99">R$ 4,99</option>
                 </select>
                 <figure>
+
                     <a href="https://www.brisanet.com.br/redemovel" target="_blank">
                         <img class="brisanet-logo-img" src="img/favicon-brisanet.svg" alt="">
+                        <p class="sr-only">Logo da empresa Brisanet em laranja. Ao clicar será redirecionado ao site
+                            oficial da empresa.</p>
                     </a>
                 </figure>
             </div>
@@ -122,7 +125,10 @@
 
     <div class="sticker">
         <a href="https://forms.gle/RvUn99oWAN8MaXCS6" target="_blank">
-            <img class="bug-img" src="img/warning-fill.svg" alt="">
+            <abbr title="Dê sugestões, reporte erros, etc.">
+                <img class="bug-img" src="img/file-plus-fill.svg" alt="">
+            </abbr>
+
         </a>
     </div>
 
