--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
                 <select id="value-plan" required>
                     <option value="" disabled selected>Opções...</option>
                     <option selected value="4.99">R$ 4,99</option>
+                    <option selected value="10">R$ 10,00</option>
+                    <option selected value="20">R$ 20,00</option>
+                    <option selected value="29.99">R$ 29,99</option>
                 </select>
                 <figure>
 
