--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
             <div class="align-img-input">
                 <select id="value-plan" required>
                     <option value="" disabled selected>Opções...</option>
-                    <option selected value="4.99">R$ 4,99</option>
-                    <option selected value="10">R$ 10,00</option>
-                    <option selected value="20">R$ 20,00</option>
-                    <option selected value="29.99">R$ 29,99</option>
+                    <option value="4.99">R$ 4,99</option>
+                    <option value="10">R$ 10,00</option>
+                    <option value="20">R$ 20,00</option>
+                    <option value="29.99">R$ 29,99</option>
                 </select>
                 <figure>
 
