--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
     <link rel="apple-touch-icon" sizes="120x120" href="./img/icon-brisanet-smartphone.png">
     <link rel="apple-touch-icon" sizes="76x76" href="./img/icon-brisanet-smartphone.png">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9VWZEG4HMH"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-9VWZEG4HMH');
+    </script>
+
 
     <title>QUICKBILL | Calculadora de proporcionais 5G</title>
 </head>
