--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <li></li>
     </ul>
 
-    <form class="quickbill">
+    <form class="myForm">
         <h1>QUICKBILL CALC</h1>
 
         <div class="input-wrapper">
@@ -126,35 +126,6 @@
             <button type="submit">Enviar</button>
         </div>
     </form>
-
-    <form class="quickmeter">
-        <h1>QUICKMETER</h1>
-
-        <div class="input-wrapper">
-            <label for="minutes">Tempo de uso:</label>
-            <input type="number" id="minutes" name="minutes" required placeholder="Digite em minutos">
-    
-            <label for="activity">Tipo de Atividade:</label>
-            <select id="activity" name="activity" onchange="toggleResolution()">
-              <option value="" disabled selected>Escolha uma opção...</option>
-              <option value="videoSD">Streaming de Vídeo (SD)</option>
-              <option value="videoHD">Streaming de Vídeo (HD)</option>
-              <option value="video4K">Streaming de Vídeo (4K)</option>
-              <option value="audioHQ">Streaming de Áudio (Alta Qualidade)</option>
-              <option value="webBrowsing">Navegação na Web</option>
-              <option value="socialMedia">Redes Sociais</option>
-              <option value="videoCall">Chamadas de Vídeo</option>
-              <option value="downloads">Download/Upload de Arquivos</option>
-            </select>
-        </div>
-
-
-        <div class="buttons">
-            <button type="reset">Limpar</button>
-            <button type="submit">Enviar</button>
-        </div>
-    </form>
-
 
     <div class="modal-card">
 
