--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </ul>
 
     <form class="myForm">
-        <h1>QUICKBILL CALC</h1>
+        <h1>QUICKBILL</h1>
 
         <div class="input-wrapper">
             <label for="maturity">Data de Vencimento:</label>
@@ -123,8 +123,13 @@
         <div class="buttons">
             <button type="reset">Limpar</button>
             <button type="submit">Enviar</button>
+
+        <div class="buttonQuickmeter"><img src="img/arrow-up-right-fill.svg" alt="Flecha indicando link"></div>
+
         </div>
     </form>
+
+
 
     <div class="modal-card">
 
