--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <input type="number" id="minutes" name="minutes" required placeholder="Digite em minutos">
                 
             <label for="activity">Tipo de Atividade:</label>
-            <select id="activity" name="activity">
+            <select id="activity" name="activity" required>
                 <option value="" selected disabled>Escolha uma opção...</option>
                 <option value="videoSD">Streaming de Vídeo (SD)</option>
                 <option value="videoHD">Streaming de Vídeo (HD)</option>
